--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,12 @@
     padding-bottom: 100px;
     display: block;
 }
+.text-gradient {
+    background-image: linear-gradient(#ffc0cb, #f8a1b2);
+    -webkit-background-clip: text;
+    color: transparent;
+    text-shadow: 0px 0px 5px rgba(255, 192, 203, 0.5);
+}
 
 .black-gradient {
     background: #000000; /* fallback for old browsers */
